--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,6 +3,16 @@ name: CI
 on: [push]
 
 jobs:
+  build0:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run a one-line script
+      run: echo Hello, world in build0!
+    - name: cat file
+      run: touch text.txt && echo '** 0 **' >> text.txt && cat text.txt
+
   build1:
     runs-on: ubuntu-latest
 
@@ -15,6 +25,8 @@ jobs:
         sleep 15 && date +"%Y/%m/%d %p %I:%M:%S"
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: cat file
+      run: touch text.txt && echo '** 1 **' >> text.txt && cat text.txt
 
   build2:
     runs-on: ubuntu-latest
@@ -28,6 +40,8 @@ jobs:
         sleep 10 && date +"%Y/%m/%d %p %I:%M:%S"
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: cat file
+      run: touch text.txt && echo '** 2 **' >> text.txt && cat text.txt
 
   build3:
     runs-on: ubuntu-latest
@@ -41,3 +55,5 @@ jobs:
         sleep 0 && date +"%Y/%m/%d %p %I:%M:%S"
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: cat file
+      run: touch text.txt && echo '** 3 **' >> text.txt && cat text.txt
